3.99.99
	arbor.pm: ShowHardware(): fail if command segfaults - 9.1.2

	exos.pm: filter hivemanager password

	junos.pm: filter timestamps from show <*> alarms

	rancid.types.conf: add show system alarms for junipers

	nxos.pm: filter logflahs: icamsql db new in nexos 10.2

	sros.pm: filter new/changed timestamps in configs for 21.10.R1

	mtlogin: change login options to dumb mode to eliminate terminal escape
	codes - github.com/mathiswolff

	rancid.types.conf: add an example definition for cisco-ucs

	rancid: print error if script is undefined - Per-Olof Olsson

	rancid.conf.sample: fix variable name - Per-Olof Olsson

	nxos.pm: match prompt like "routername(nxos)#" on a UCS with a nexus
	switch

	arcos.pm: show version also could have a communication failure

	hpuifilter.c: change environ variable name to avoid system lib conflict

	nxos.pm: CSCvz71586 accessing bootflash from multiple VDCs
	simultaneously might return 0 size bootflash

	rancid.types.base: add paloaltoxml device type to collect xml config

	nslogin: netscalar 13.x may include a prefix to the prompt, eg: "super>"

	Add rancid.conf:ACLFILTERREGEX knob for ACL filtering

	ciscowlc.pm: filter garbage inserted by virtual controller 8.3.150.0;
	random characters & lines - github.com/DarkNinja77

	panos.pm: trip trailing WS & GC unused code - github.com/DarkNinja77

	rancidcontrib.pm: add library of contributed rancid filters, etc,
	starting with JunosShowSystemReboot() - github.com/shigechika

	junos.pm: filter license expiration time similar to ios.pm - adaptation
	of github.com/shigechika

	sros.pm: show bootlog.txt is not a reliable source of information
	as it can be lost when an RE failover occurs.  use other sources.

	dnos10.pm: add username, system-user and snmp-server user filters -
	Arron Williamson

	iosxr.pm: afaik XR has never supported Classic-like access-lists;
	dropping this code inheritted from ios.pm

	iosxr.pm: fail on "drbg intiantiate failed" - XR 7.1.3.13
